[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/level.gd" type="Script" id=1]
[ext_resource path="res://assets/fundo.jpg" type="Texture" id=2]
[ext_resource path="res://assets/buttons/but_start.png" type="Texture" id=3]
[ext_resource path="res://assets/font/walibi-holland-webfont.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/audio/right.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/win.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/game_over.ogg" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 54
font_data = ExtResource( 4 )

[sub_resource type="StreamTexture" id=6]
resource_local_to_scene = true
flags = 4
load_path = "res://.import/fundo.jpg-2614e114241fd1c86b822538e5dcc62b.stex"

[sub_resource type="DynamicFont" id=3]
size = 53
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 119
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 75
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 4 )

[node name="level" type="Node2D"]
script = ExtResource( 1 )

[node name="ui" type="CanvasLayer" parent="."]

[node name="timer" type="Label" parent="ui"]
margin_left = 40.9084
margin_top = 39.9084
margin_right = 338.908
margin_bottom = 149.908
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 1 )
text = "00:00"
align = 1
valign = 1

[node name="cardsEn" type="Label" parent="ui"]
margin_left = 12.0
margin_top = 6.0
margin_right = 1919.0
margin_bottom = 135.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 2 )
text = "PALAVR4"
align = 1
valign = 1

[node name="tentativas" type="Label" parent="ui"]
margin_left = 10.0
margin_top = 152.0
margin_right = 469.0
margin_bottom = 287.0
custom_fonts/font = SubResource( 5 )
text = "Tentativas: 4"
align = 1
valign = 1

[node name="msg_box" type="TouchScreenButton" parent="ui"]
visible = false
position = Vector2( 0, 5.00002 )
scale = Vector2( 0.998438, 0.989815 )
normal = SubResource( 6 )

[node name="title" type="Label" parent="ui/msg_box"]
margin_left = 11.0
margin_top = 352.0
margin_right = 1914.0
margin_bottom = 737.0
custom_colors/font_color = Color( 1, 0.972549, 0.972549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 3 )
text = "Jogador x ganhou."
align = 1
valign = 1

[node name="container" type="HBoxContainer" parent="ui"]
margin_left = 30.0
margin_top = 50.0
margin_right = 1890.0
margin_bottom = 152.0
rect_min_size = Vector2( 1860, 102 )
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="control" type="Control" parent="ui/container"]
margin_left = 1758.0
margin_right = 1856.0
margin_bottom = 102.0
rect_min_size = Vector2( 98, 102 )

[node name="exit" type="TouchScreenButton" parent="ui/container/control"]
position = Vector2( 0, -38 )
scale = Vector2( 0.317829, 1.41758 )
normal = ExtResource( 3 )

[node name="labelExit" type="Label" parent="ui/container/control"]
anchor_left = 0.143
anchor_top = -0.256
anchor_right = 1.184
anchor_bottom = 0.892
margin_left = -0.0140009
margin_top = -24.0
margin_right = -0.0319748
margin_bottom = 12.644
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "X"

[node name="Control" type="Control" parent="ui/container"]
margin_left = 1860.0
margin_right = 1860.0
margin_bottom = 102.0

[node name="ajuda" type="TouchScreenButton" parent="ui/container/Control"]
position = Vector2( -124, 872 )
scale = Vector2( 0.343669, 1.41758 )
normal = ExtResource( 3 )

[node name="Label" type="Label" parent="ui/container/Control"]
margin_left = -103.0
margin_top = 886.0
margin_right = -11.0
margin_bottom = 982.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonJogar" type="TouchScreenButton" parent="ui"]
visible = false
position = Vector2( 705, 634 )
scale = Vector2( 1.20413, 1.12088 )
normal = ExtResource( 3 )

[node name="jogar" type="Label" parent="ui"]
visible = false
margin_left = 733.0
margin_top = 657.0
margin_right = 1154.0
margin_bottom = 727.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Jogar novamente"

[node name="color" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1920, 1080 )
color = Color( 0, 0, 0, 1 )

[node name="background" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.490196 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 1920, 1080 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
margin_left = 344.0
margin_top = 283.0
margin_right = 1693.0
margin_bottom = 636.0

[node name="TouchScreenButton2" type="TouchScreenButton" parent="HBoxContainer"]
visible = false
position = Vector2( 340, 0 )
scale = Vector2( 0.658915, 4.03297 )
normal = ExtResource( 3 )

[node name="TouchScreenButton3" type="TouchScreenButton" parent="HBoxContainer"]
visible = false
position = Vector2( 708, -8 )
scale = Vector2( 0.669251, 4.12088 )
normal = ExtResource( 3 )

[node name="TouchScreenButton4" type="TouchScreenButton" parent="HBoxContainer"]
visible = false
position = Vector2( 1044, -8 )
scale = Vector2( 0.627907, 4.07692 )
normal = ExtResource( 3 )

[node name="cards" type="Node2D" parent="."]
position = Vector2( 0, 162.653 )

[node name="sfxRight" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -21.849

[node name="sfxWin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -24.47

[node name="timer" type="Timer" parent="."]
autostart = true

[node name="sfxGameover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -27.966

[connection signal="pressed" from="ui/container/control/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="ui/container/Control/ajuda" to="." method="_on_ajuda_pressed"]
[connection signal="pressed" from="ui/buttonJogar" to="." method="_on_buttonJogar_pressed"]
[connection signal="draw" from="HBoxContainer/TouchScreenButton4" to="." method="_on_TouchScreenButton4_draw"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
